# snake-game

./: CMakeLists.txt  Field.cpp  README.md  main.cpp  oop2_snake_new.sln  runcmake.bat
include/: console_handler.h  game.h  snake.h
oop2_snake_new/: Coordinates.cpp  Direction.cpp  Food.cpp  Snake.cpp  oop2_snake_new.vcxproj  oop2_snake_new.vcxproj.filters
src/: console_handler.cpp  coordinates.cpp  direction.cpp  field.cpp  food.cpp  game.cpp  snake.cpp  window.cpp
